Pull diagnostic rewrite from intellij-quarkus (#376)
* Mirror diagnostic rewrite from intellij-quarkus

* Use non-deprecated AnnotationBuilder#newAnnotation and refresh quickfix in background

* Add check for codeAction support in LS before loading them

* Properly start language servers when files are opened